tests/kubernetes/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo1
  labels:
    app.kubernetes.io/name: "hello-world"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: "hello-world"
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "hello-world"
    spec:
      containers:
      - name: echo1
        image: hashicorp/http-echo
        args:
        - "-text=echo1"
        ports:
        - containerPort: 5678
