tests/kubernetes/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo1
  labels:
    app.kubernetes.io/name: "hello-world"
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app.kubernetes.io/name: "hello-world"
